# AxoDen

./: .buildinfo  .gitignore  README.md  axoden.html  genindex.html  gui.html  gui_projections_quantification.py  how_to_release.md  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  tox.ini  volume_projections.html  volume_projections.py
.devcontainer/: devcontainer.json
.github/: create_executables.yml
.github/workflows/: build_executables.yml  check.yml  create_exes.yml  docs.yml  lint.yml  publish.yml  test.yml
.streamlit/: config.toml
_sources/: axoden.rst.txt  index.rst.txt  volume_projections.rst.txt
axoden/: __init__.py  gui_projections_quantification.py  streamlit_app.py  volume_projections.py
axoden/gui/: __init__.py  gui_projections_quantification.py
axoden/streamlit/: 1_📊️_Axoden.py
axoden/streamlit_app/: 1_📊️_Axoden.py  pdf_utils.py
docs/source/: conf.py  gui.rst
streamlit_app/: 1_📊️_Axoden.py
streamlit_app/pages/: 2_❔️_Tutorial_&_How_To.py
test_images/: 745_TH-CL.tif  745_TH-CM.tif  745_TH-MD.tif  745_TH-PL.tif  745_TH-VL.tif  745_TH-VP.tif  746_TH-CL.tif  746_TH-CM.tif  746_TH-MD.tif  746_TH-PL.tif  746_TH-VL.tif  746_TH-VP.tif  747_TH-CL.tif  747_TH-CM.tif  747_TH-MD.tif  747_TH-PL.tif  747_TH-VL.tif  747_TH-VP.tif  748_TH-CL.tif  748_TH-CM.tif  748_TH-MD.tif  748_TH-PL.tif  748_TH-VL.tif  748_TH-VP.tif  752_TH-CL.tif  752_TH-CM.tif  752_TH-MD.tif  752_TH-PL.tif  752_TH-VL.tif  752_TH-VP.tif
tests/: test_volume_projections.py
tests/data/: data.csv  (+3 more)
(+13 files in other folders)
